--- a/bower.json
+++ b/bower.json
@@ -10,20 +10,19 @@
     "bootstrap-sass": "3.3.5",
     "font-awesome": "fontawesome#~4.4.0",
     "elegant-icons": "*",
-    "jquery.fitvids": "FitVids#~1.1.0",
+    "flexslider-scss": "~1.0.0",
+    "owl-carousel": "~1.3.2",
+    "imagesloaded": "~3.2.0",
+    "jquery-validation": "~1.14.0",
     "gmaps": "~0.4.21",
+    "bootstrap-hover-dropdown": "~2.1.3",
     "isMobile": "~0.3.9",
     "matchHeight": "~0.6.0",
-    "place-holder": "~0.2.0",
-    "owl-carousel": "~1.3.2",
-    "rrssb": "RRSSB#~1.8.6",
-    "bootstrap-hover-dropdown": "~2.1.3",
-    "isotope": "~2.2.2",
+    "jquery.placeholder": "~0.2.4",
     "blueimp-gallery": "~2.16.0",
-    "imagesloaded": "images-loaded#~3.1.8",
-    "jquery-validation": "jquery-validate#~1.14.0",
     "blueimp-bootstrap-image-gallery": "~3.1.3",
-    "flexslider-scss": "~1.0.0"
+    "jquery.fitvids": "FitVids#~1.1.0",
+    "isotope": "~2.2.2"
   },
   "overrides": {
     "bootstrap-sass": {
@@ -72,7 +71,7 @@
     },
     "isotope": {
       "main": [
-        "./js/isotope.js"
+        "./dist/isotope.pkgd.js"
       ],
       "dependencies": {}
     },
@@ -81,6 +80,9 @@
         "./imagesloaded.pkgd.js"
       ],
       "dependencies": {}
+    },
+    "jquery.placeholder": {
+      "main": "./jquery.placeholder.js"
     }
   }
 }
