Fixed Testimoanial Client Image upload && changed part of the front page

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -12,6 +12,11 @@
       ],
       "main": true
     },
+    "admin.js": {
+      "files": [
+        "scripts/admin.js"
+      ]
+    },
     "jquery.js": {
       "bower": ["jquery"]
     }
