--- a/bower.json
+++ b/bower.json
@@ -7,21 +7,21 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "3.3.5",
+    "bootstrap-sass": "3.3.7",
     "font-awesome": "fontawesome#~4.4.0",
     "elegant-icons": "*",
-    "flexslider-scss": "~1.0.0",
     "owl-carousel": "~1.3.2",
     "imagesloaded": "~3.2.0",
     "gmaps": "~0.4.21",
     "bootstrap-hover-dropdown": "~2.1.3",
     "isMobile": "~0.3.9",
     "matchHeight": "~0.6.0",
-    "jquery.placeholder": "~0.2.4",
     "blueimp-gallery": "~2.16.0",
     "blueimp-bootstrap-image-gallery": "~3.1.3",
     "jquery.fitvids": "FitVids#~1.1.0",
-    "isotope": "~2.2.2"
+    "isotope": "~2.2.2",
+    "flexslider-compass": "*",
+    "jquery-placeholder": "~2.0.7"
   },
   "overrides": {
     "bootstrap-sass": {
@@ -54,7 +54,7 @@
         "./owl-carousel/owl.theme.css"
       ]
     },
-    "flexslider-scss": {
+    "flexslider-compass": {
       "main": [
         "./jquery.flexslider.js",
         "./flexslider.scss",
@@ -76,8 +76,14 @@
       ],
       "dependencies": {}
     },
-    "jquery.placeholder": {
+    "jquery-placeholder": {
       "main": "./jquery.placeholder.js"
+    },
+    "bootstrap-hover-dropdown": {
+      "main": [
+        "./bootstrap-hover-dropdown.js"
+      ],
+      "dependencies": {}
     }
   }
 }
