--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "jquery.fitvids": "FitVids#~1.1.0",
     "isotope": "~2.2.2",
     "flexslider-compass": "*",
-    "jquery-placeholder": "~2.0.7"
+    "jquery-placeholder": "~2.0.7",
+    "jquery-validation": "^1.15.1"
   },
   "overrides": {
     "bootstrap-sass": {
@@ -82,6 +83,12 @@
     "bootstrap-hover-dropdown": {
       "main": [
         "./bootstrap-hover-dropdown.js"
+      ],
+      "dependencies": {}
+    },
+    "jquery-validation": {
+      "main": [
+        "./dist/jquery.validate.js"
       ],
       "dependencies": {}
     }
